- Fixed categories-toast and categories routes to fit better on mobile - Fixed relative paths to retrievable categories from WP API - Changed some margins and gaps for category post list (category/:slug routes) - Changed Navbar colors - Changed folder name for categories-toast - Bootstrap  is slighty lighter =)

--- a/src/App.css
+++ b/src/App.css
@@ -44,7 +44,7 @@ $dark: #353331;*/
   --bs-info: #d6b657;
   --bs-warning: #a11313;
   --bs-danger: #F9F7F2;
-  --bs-light: #7F8C8D;
+  --bs-light: #a0b0b1;
   --bs-dark: #333333;
   --bs-primary-rgb: 71, 94, 81;
   --bs-secondary-rgb: 16, 102, 95;
@@ -52,7 +52,7 @@ $dark: #353331;*/
   --bs-info-rgb: 214, 182, 87;
   --bs-warning-rgb: 161, 19, 19;
   --bs-danger-rgb: 249, 247, 242;
-  --bs-light-rgb: 127, 140, 141;
+  --bs-light-rgb: 160, 176, 177;
   --bs-dark-rgb: 51, 51, 51;
   --bs-primary-text-emphasis: #1c2620;
   --bs-secondary-text-emphasis: #062926;
@@ -2182,13 +2182,13 @@ progress {
 
 .table-light {
   --bs-table-color: #000;
-  --bs-table-bg: #7F8C8D;
-  --bs-table-border-color: #667071;
-  --bs-table-striped-bg: #798586;
+  --bs-table-bg: #a0b0b1;
+  --bs-table-border-color: #808d8e;
+  --bs-table-striped-bg: #98a7a8;
   --bs-table-striped-color: #000;
-  --bs-table-active-bg: #727e7f;
+  --bs-table-active-bg: #909e9f;
   --bs-table-active-color: #000;
-  --bs-table-hover-bg: #758282;
+  --bs-table-hover-bg: #94a3a4;
   --bs-table-hover-color: #000;
   color: var(--bs-table-color);
   border-color: var(--bs-table-border-color);
@@ -3279,19 +3279,19 @@ textarea.form-control-lg {
 
 .btn-light {
   --bs-btn-color: #000;
-  --bs-btn-bg: #7F8C8D;
-  --bs-btn-border-color: #7F8C8D;
-  --bs-btn-hover-color: #fff;
-  --bs-btn-hover-bg: #6c7778;
-  --bs-btn-hover-border-color: #667071;
-  --bs-btn-focus-shadow-rgb: 108, 119, 120;
-  --bs-btn-active-color: #fff;
-  --bs-btn-active-bg: #667071;
-  --bs-btn-active-border-color: #5f696a;
+  --bs-btn-bg: #a0b0b1;
+  --bs-btn-border-color: #a0b0b1;
+  --bs-btn-hover-color: #000;
+  --bs-btn-hover-bg: #889696;
+  --bs-btn-hover-border-color: #808d8e;
+  --bs-btn-focus-shadow-rgb: 136, 150, 150;
+  --bs-btn-active-color: #000;
+  --bs-btn-active-bg: #808d8e;
+  --bs-btn-active-border-color: #788485;
   --bs-btn-active-shadow: inset 0 3px 5px rgba(0, 0, 0, 0.125);
   --bs-btn-disabled-color: #000;
-  --bs-btn-disabled-bg: #7F8C8D;
-  --bs-btn-disabled-border-color: #7F8C8D;
+  --bs-btn-disabled-bg: #a0b0b1;
+  --bs-btn-disabled-border-color: #a0b0b1;
 }
 
 .btn-dark {
@@ -3414,19 +3414,19 @@ textarea.form-control-lg {
 }
 
 .btn-outline-light {
-  --bs-btn-color: #7F8C8D;
-  --bs-btn-border-color: #7F8C8D;
+  --bs-btn-color: #a0b0b1;
+  --bs-btn-border-color: #a0b0b1;
   --bs-btn-hover-color: #000;
-  --bs-btn-hover-bg: #7F8C8D;
-  --bs-btn-hover-border-color: #7F8C8D;
-  --bs-btn-focus-shadow-rgb: 127, 140, 141;
+  --bs-btn-hover-bg: #a0b0b1;
+  --bs-btn-hover-border-color: #a0b0b1;
+  --bs-btn-focus-shadow-rgb: 160, 176, 177;
   --bs-btn-active-color: #000;
-  --bs-btn-active-bg: #7F8C8D;
-  --bs-btn-active-border-color: #7F8C8D;
+  --bs-btn-active-bg: #a0b0b1;
+  --bs-btn-active-border-color: #a0b0b1;
   --bs-btn-active-shadow: inset 0 3px 5px rgba(0, 0, 0, 0.125);
-  --bs-btn-disabled-color: #7F8C8D;
+  --bs-btn-disabled-color: #a0b0b1;
   --bs-btn-disabled-bg: transparent;
-  --bs-btn-disabled-border-color: #7F8C8D;
+  --bs-btn-disabled-border-color: #a0b0b1;
   --bs-gradient: none;
 }
 
@@ -7060,8 +7060,8 @@ textarea.form-control-lg {
   text-decoration-color: RGBA(var(--bs-light-rgb), var(--bs-link-underline-opacity, 1)) !important;
 }
 .link-light:hover, .link-light:focus {
-  color: RGBA(153, 163, 164, var(--bs-link-opacity, 1)) !important;
-  text-decoration-color: RGBA(153, 163, 164, var(--bs-link-underline-opacity, 1)) !important;
+  color: RGBA(179, 192, 193, var(--bs-link-opacity, 1)) !important;
+  text-decoration-color: RGBA(179, 192, 193, var(--bs-link-underline-opacity, 1)) !important;
 }
 
 .link-dark {
