--- a/src/_appVars.scss
+++ b/src/_appVars.scss
@@ -13,7 +13,7 @@ $success: #09afb4;
 $info: #d6b657;
 $warning: #a11313;
 $danger: #F9F7F2;
-$light: #7F8C8D;
+$light: #a0b0b1;
 $dark: #333333;
 
 $font-family-base:"Lato", sans-serif;
