--- a/src/components/nav-bar/nav-bar.style.scss
+++ b/src/components/nav-bar/nav-bar.style.scss
@@ -1,3 +1,5 @@
+@import "../../appVars";
+
 #navigation-bar,
 #navigation-bar__nav {
   border-radius: 0px;
@@ -6,4 +8,17 @@
 .select,
 .control {
   border-radius: 0;
+}
+
+.dropdown-menu {
+  background-color: $dark !important; 
+}
+
+
+.dropdown-item{
+  color: $light !important;
+}
+
+.dropdown-item:hover{
+  background-color: $secondary !important;
 }
